fix: erreurs