@@ -19,11 +19,13 @@ import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class TicketService {
+
+    private static final String TICKET_NOT_FOUND_MESSAGE = "Ticket not found";
+    private static final String UPLOAD_DIR = "./uploads";
 
     private final TicketRepository ticketRepository;
     private final HotelRepository hotelRepository;
@@ -32,8 +34,6 @@ public class TicketService {
     private final TicketImageRepository ticketImageRepository;
     private final TicketHistoryRepository ticketHistoryRepository;
     private final PlanRepository planRepository;
-
-    private static final String UPLOAD_DIR = "./uploads";
 
     @Transactional
     public TicketResponse createTicket(CreateTicketRequest request, List<MultipartFile> images) {
@@ -58,7 +58,7 @@ public class TicketService {
             ticket.setClientPhone(request.getClientPhone());
             ticket.setDescription(request.getDescription());
             ticket.setStatus(TicketStatus.OPEN);
-            ticket.setIsUrgent(request.getIsUrgent() != null ? request.getIsUrgent() : false);
+            ticket.setIsUrgent(Boolean.TRUE.equals(request.getIsUrgent()));
 
             // Calculate SLA deadline based on hotel plan
             int slaHours = hotel.getPlan().getSlaHours();
@@ -74,39 +74,37 @@ public class TicketService {
             }
 
             return convertToResponse(ticket);
-        } catch (RuntimeException e) {
-            throw e;
         }
     }
 
     public TicketResponse getTicketByNumber(String ticketNumber) {
         Ticket ticket = ticketRepository.findByTicketNumber(ticketNumber)
-                .orElseThrow(() -> new RuntimeException("Ticket not found"));
+                .orElseThrow(() -> new RuntimeException(TICKET_NOT_FOUND_MESSAGE));
         return convertToResponse(ticket);
     }
 
     public TicketResponse getTicketById(UUID ticketId) {
         Ticket ticket = ticketRepository.findById(ticketId)
-                .orElseThrow(() -> new RuntimeException("Ticket not found"));
+                .orElseThrow(() -> new RuntimeException(TICKET_NOT_FOUND_MESSAGE));
         return convertToResponse(ticket);
     }
 
     public List<TicketResponse> getTicketsByHotel(UUID hotelId) {
         return ticketRepository.findByHotelId(hotelId).stream()
                 .map(this::convertToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<TicketResponse> getTicketsByTechnician(UUID technicianId) {
         return ticketRepository.findByAssignedTechnicianId(technicianId).stream()
                 .map(this::convertToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<TicketResponse> getTicketsByEmail(String email) {
         return ticketRepository.findByClientEmail(email).stream()
                 .map(this::convertToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -115,13 +113,13 @@ public class TicketService {
     public List<TicketResponse> getAllTickets() {
         return ticketRepository.findAll().stream()
                 .map(this::convertToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public TicketResponse updateTicketStatus(UUID ticketId, UpdateTicketStatusRequest request, UUID userId) {
         Ticket ticket = ticketRepository.findById(ticketId)
-                .orElseThrow(() -> new RuntimeException("Ticket not found"));
+                .orElseThrow(() -> new RuntimeException(TICKET_NOT_FOUND_MESSAGE));
 
         TicketStatus oldStatus = ticket.getStatus();
         ticket.setStatus(request.getStatus());
@@ -148,7 +146,7 @@ public class TicketService {
     @Transactional
     public TicketResponse addImagesToTicket(UUID ticketId, List<MultipartFile> images) {
         Ticket ticket = ticketRepository.findById(ticketId)
-                .orElseThrow(() -> new RuntimeException("Ticket not found"));
+                .orElseThrow(() -> new RuntimeException(TICKET_NOT_FOUND_MESSAGE));
 
         if (images != null && !images.isEmpty()) {
             for (MultipartFile image : images) {
@@ -243,10 +241,10 @@ public class TicketService {
         List<TicketImageDTO> imageDTOs = ticketImages.stream()
                 .map(img -> TicketImageDTO.builder()
                         .id(img.getId())
-                        .storage_path(img.getStoragePath())
-                        .file_name(img.getFileName())
+                        .storagePath(img.getStoragePath())
+                        .fileName(img.getFileName())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
         response.setImages(imageDTOs);
 
         return response;
